added authors collection to the DB and made changes to relavent files authors.js, validate.js, authors.js, index.js, swagger-output.json (run swagger to update)
